[gd_scene load_steps=8 format=3 uid="uid://clfudva3bujw6"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_dubi4"]
[ext_resource type="FontFile" uid="uid://dmu4eukiu8lwd" path="res://COTESPANOL.ttf" id="1_k0a2c"]
[ext_resource type="Script" path="res://Scripts/healthBar.gd" id="2_1xwqh"]
[ext_resource type="Texture2D" uid="uid://dp8sl11y433sx" path="res://Assets/heart.png" id="3_cxt1j"]
[ext_resource type="Texture2D" uid="uid://cln4clf4iilkr" path="res://Assets/button.png" id="3_els04"]
[ext_resource type="Texture2D" uid="uid://b3lehwt1kyl1o" path="res://Assets/button_pressed.png" id="4_hqwfd"]
[ext_resource type="Texture2D" uid="uid://yaov70dm2wso" path="res://Assets/button_hover.png" id="5_hw3he"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_dubi4")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_k0a2c")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -125.0
offset_right = 20.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_k0a2c")
theme_override_font_sizes/font_size = 64

[node name="StartButton" type="TextureButton" parent="."]
process_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -210.0
offset_right = 104.0
offset_bottom = -138.0
grow_horizontal = 2
grow_vertical = 0
action_mode = 0
texture_normal = ExtResource("3_els04")
texture_pressed = ExtResource("4_hqwfd")
texture_hover = ExtResource("5_hw3he")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -24.0
offset_right = 53.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_k0a2c")
theme_override_font_sizes/font_size = 32
text = "START"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="Node2D" parent="."]
script = ExtResource("2_1xwqh")

[node name="heart_0" type="TextureRect" parent="HealthBar"]
offset_left = 23.0
offset_top = 23.0
offset_right = 63.0
offset_bottom = 63.0
texture = ExtResource("3_cxt1j")

[node name="heart_1" type="TextureRect" parent="HealthBar"]
offset_left = 63.0
offset_top = 23.0
offset_right = 103.0
offset_bottom = 63.0
texture = ExtResource("3_cxt1j")

[node name="heart_2" type="TextureRect" parent="HealthBar"]
offset_left = 103.0
offset_top = 23.0
offset_right = 143.0
offset_bottom = 63.0
texture = ExtResource("3_cxt1j")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
